# serde-vici

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: dependabot.yml  renovate.json
.github/workflows/: cd.yml  ci.yml  docs.yml  lint.yml  publish.yml  release.yml  test.yml
src/: de.rs  error.rs  lib.rs  read.rs  ser.rs
src/value/: mod.rs
